--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ nltk
 pandas
 streamlit
 numpy
-tensorflow==2.13.1
+Python 3.10
+Tensorflow==2.13.0
+tensorflow-text== 2.13.0
+tensorflow-models-official== 2.13.1
 regex
 keras
 keras-preprocessing
