--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,7 @@ nltk
 pandas
 streamlit
 numpy
-Tensorflow==2.13.0
-tensorflow-text== 2.13.0
-tensorflow-models-official== 2.13.1
+tensorflow
 regex
 keras
 keras-preprocessing
