--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ nltk
 pandas
 streamlit==1.38.0
 numpy
-tensorflow>=2.13.0
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-hub==0.12.0
+tensorflow-intel==2.13.0
+tensorflow-io-gcs-filesystem==0.31.0
 regex
 keras
 keras-preprocessing
